# doomba

./: .gitignore  README.md  dcdc.3dm  lidar_mount.stl  psu-box-1.stl  psu-box-bottom-1.stl
create/: doomba_linked.3dm  doomba_linked.3dm.rhl  mounting_plates.dxf
create/parts/: BeagleBone Black.3dm  IMU.3dm  create robot part.3dm  lidar.3dm
doomba_cape/: doomba_cape.b#1  doomba_cape.b#2  doomba_cape.b#3  doomba_cape.b#4  doomba_cape.b#5  doomba_cape.b#6  doomba_cape.b#7  doomba_cape.b#8  doomba_cape.b#9  doomba_cape.brd  doomba_cape.s#1  doomba_cape.s#2  doomba_cape.s#3  doomba_cape.s#4  doomba_cape.s#5  doomba_cape.s#6  doomba_cape.s#7  doomba_cape.s#8  doomba_cape.s#9  doomba_cape.sch  doomba_cape_00.job  doomba_cape_00.pro  doomba_cape_01.job  doomba_cape_01.pro  doomba_cape_02.job  doomba_cape_02.pro  doomba_cape_03.job  doomba_cape_03.pro  doomba_cape_04.job  doomba_cape_04.pro  eagle.epf
ros/src/: frames.gv
ros/src/doomba/: CMakeLists.txt  doomba.rviz  package.xml
ros/src/doomba/launch/: doomba-control.launch  doomba-sim.launch  doomba-with-laser.launch  doomba.launch
ros/src/doomba/urdf/: doomba.urdf.xacro
ros/src/doomba_params/: CMakeLists.txt  package.xml
ros/src/turtlebot_teleop/launch/: keyboard_teleop.launch  xbox360_teleop.launch
ros/src/turtlebot_teleop/launch/includes/: velocity_smoother.launch.xml
ros/src/xv_11_laser_driver/: CMakeLists.txt  neato_laser.rviz  package.xml
